# 3dRendererProject

./: .gitignore  3dRendererProject.cpp  3dRendererProject.sln  3dRendererProject.vcxproj  3dRendererProject.vcxproj.filters  CMakeLists.txt  CameraDef.hpp  DrawFuncs.cpp  MSAAsamples.hpp  Materials.hpp  Mesh.cpp  PixelShadeFuncs.hpp  QUATERNION.hpp  RasterEngine2.h  ScreenBuffer.hpp  ShadePixels.cpp  Textures.cpp  Textures.hpp  TriCastLib.hpp  VectorFuncTemplate.hpp  VertSettings.hpp  eulerAngles.hpp  geometry.hpp  matlib.hpp  matrix.hpp  matrixTemplate.hpp  vectorTemplate.hpp  vectors.hpp
Inc/: BMPgenfuncs.hpp  CameraDef.hpp  Lighting.hpp  Lights.hpp  Materials.hpp  PixelShadeFuncs.hpp  ScreenBuffer.hpp  Textures.hpp  TriCastLib.hpp  VectorFuncTemplate.hpp  cube.hpp  geometry.hpp  matlib.hpp  matrix.hpp  matrixTemplate.hpp  vectorTemplate.hpp  vectors.hpp
Inc/Vectors/: QUATERNION.hpp  matlib.hpp  matrix.hpp  matrixTemplate.hpp  vectors.hpp
Inc/buffers/: ScreenBuffer.hpp
Inc/geometry/: CameraDef.hpp  geometry.hpp
Inc/shading/: Color.hpp  Lights.hpp  MSAAsamples.hpp  Materials.hpp  PixelShadeFuncs.hpp  Textures.hpp
src/: DrawFuncs.cpp  Mesh.cpp  RasterEngine2.cpp  RasterEngine2.h  Texture.cpp
